Bug 689564.  Only forward event attributes on body/frameset to the window if we also forward the corresponding on* property.  r=smaug